# AutonomousDiffBot

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
.devcontainer/: Dockerfile  devcontainer.json
description/: robot.urdf.xacro
description/hardware/: robot.urdf.xacro  robot_core.xacro  robot_definitions.xacro
description/ros2_control/: diff_bot.ros2_control.xacro
hardware/: diff_bot_system.cpp  differential_drive_interface.cpp
hardware/include/: diff_bot_system.hpp  wheel.hpp
install/: setup.sh
install/autonomous_rover/share/ament_index/resource_index/package_run_dependencies/: autonomous_rover
install/autonomous_rover/share/ament_index/resource_index/parent_prefix_path/: autonomous_rover
install/autonomous_rover/share/autonomous_rover/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autonomous_rover/share/autonomous_rover/cmake/: autonomous_roverConfig-version.cmake  autonomous_roverConfig.cmake
install/autonomous_rover/share/autonomous_rover/config/: view_bot.rviz
install/autonomous_rover/share/autonomous_rover/description/: inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
install/autonomous_rover/share/autonomous_rover/environment/: ament_prefix_path.dsv  path.dsv
install/autonomous_rover/share/autonomous_rover/launch/: rsp.launch.py
install/autonomous_rover/share/autonomous_rover/worlds/: empty.world
launch/: base_station_launch.py  bot_sim_launch.py  rsp.launch.py
log/: latest_build
src/autonomous_rover/description/: robot.urdf.xacro
src/autonomous_rover/launch/: rsp.launch.py
src/diff_rover/: CMakeLists.txt  package.xml
src/diff_rover/description/: robot.urdf.xacro  robot_core.xacro
src/diff_rover/launch/: rsp.launch.py
src/firmware/: platformio.ini
src/firmware/include/: Encoder.hpp  Motor.hpp  PIDControl.hpp
src/firmware/src/: Encoder.cpp  Motor.cpp  main.cpp
src/ros2_ws/: CMakeLists.txt  hardware_plugin.xml  package.xml
src/ros2_ws/.devcontainer/: Dockerfile  devcontainer.json
src/ros2_ws/description/gazebo/: bridge_parameters.yaml  robot.gazebo
src/ros2_ws/description/hardware/: robot_core.xacro  robot_description.urdf.xacro
src/ros2_ws/description/ros2_control/: diff_bot.ros2_control.xacro  diff_drive_controller.yaml
src/ros2_ws/hardware/: differential_drive_interface.cpp
src/ros2_ws/hardware/include/: differential_drive_interface.hpp  wheel.hpp
src/ros2_ws/launch/: diffbot.launch.py  rsp.py
