<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_diff_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="scottchen227@gmail.com">scottchen10</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>ros_gz_bridge</depend>
  <depend>libgpiod-dev</depend>

  <test_depend>ament_lint_auto</test_depend> 
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
